Bug 452333 - Selecting i) Wet Circle brush preset in the preset editor asserts
Summary: Selecting i) Wet Circle brush preset in the preset editor asserts
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-06 14:13 UTC by Halla Rempt
Modified: 2022-04-08 06:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2022-04-06 14:13:11 UTC
krita(1484065)/(default) kis_assert_common: SAFE ASSERT (krita): "!d->brushTipImage.isNull()" in file /home/halla/dev/krita/libs/brush/kis_brush.cpp, line 226

So, either the assert is wrong, and we can have presets with a brush without a brush tip image, or there's something really fishy going o.
Comment 2 Dmitry Kazakov 2022-04-08 06:19:02 UTC
Git commit 9ba47769906751f52889c9d45c2d5ec9821dc6e3 by Dmitry Kazakov.
Committed on 08/04/2022 at 06:18.
Pushed by dkazakov into branch 'master'.

Fix an assert when selecting "Wet Circle" brush

Auto brush has no brushTipImage() anymore (because it doesn't need that),
therefore brushTipImage() must never be called for that.

M  +11   -0    libs/brush/kis_auto_brush.cpp
M  +2    -0    libs/brush/kis_auto_brush.h
M  +1    -1    libs/brush/kis_brush.h

https://invent.kde.org/graphics/krita/commit/9ba47769906751f52889c9d45c2d5ec9821dc6e3