Fix an assert when selecting "Wet Circle" brush

Auto brush has no brushTipImage() anymore (because it doesn't need that),
therefore brushTipImage() must never be called for that.

BUG:452333